--- a/jogo-da-forca/jogo-da-forca.cbp
+++ b/jogo-da-forca/jogo-da-forca.cbp
@@ -34,6 +34,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="main.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="palavras.txt" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
